elevation to the project done

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -242,7 +242,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <!-- MENU -->
-                  <mat-toolbar class="toolbar-postit mat-elevation-z4" *ngIf="mainMenu">
+                  <mat-toolbar class="toolbar-postit mat-elevation-z4 bounceIn" *ngIf="mainMenu">
 
                     <button (click)="home()" mat-icon-button aria-label="Example icon-button with a heart icon"
                       matTooltip="Info about the action" matTooltipPosition="above">
