--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -51,6 +51,7 @@
   overflow: hidden;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;
+  @include BoxShadow(4);
 }
 .presentation-box {
     -ms-overflow-style: none;  /* IE and Edge */
