--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -11,7 +11,7 @@
             <section class="text-center " style="padding: 35px 0px 31px 0px;">
 
                 <h1 style="font-size: 40px;">{{name}}</h1>
-                <h3 style="font-size: 28px;">{{rationales.replace("`", "'")}}</h3>
+                <h3 style="max-width: 500px;" [innerHTML]="rationales" html style="font-size: 28px;"></h3>
                 <hr>
 
             </section>
