new fix for the name vote , go button fixed, toggle votes done

--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -27,12 +27,12 @@
                             class="btn btn-outline-success btn-lg mat-elevation-z8 buttons-positive" style="width: 260px;">
                             POSITIVE
                         </button>
-                        <button *ngIf="positiveVote && !readOnlyName && name !== '....'" (click)="setPositive()" type="button"
+                        <button *ngIf="positiveVote && !readOnlyName && name !== '....'" (click)="removeVote()" type="button"
                             class="btn btn-lg mat-elevation-z2 "
                             style="background-color: #1b5e20;color: white;width: 260px;">
                             POSITIVE
                         </button>
-                        <button *ngIf="readOnlyName || name === '....'" (click)="setPositive()" type="button"
+                        <button *ngIf="readOnlyName || name === '....'"  [disabled]="true" type="button"
                             class="btn btn-lg mat-elevation-z2 "
                             style="color:grey;width: 260px;">
                             POSITIVE
@@ -50,12 +50,12 @@
                             class="btn btn-outline-primary btn-lg mat-elevation-z8 buttons-neutral" style="width: 260px ">
                             NEUTRAL
                         </button>
-                        <button *ngIf="neutralVote  && !readOnlyName  && name !== '....'" (click)="setNeutral()" type="button"
+                        <button *ngIf="neutralVote  && !readOnlyName  && name !== '....'" (click)="removeVote()" type="button"
                             class="btn btn-lg mat-elevation-z2"
                             style="background-color: #0d47a1;color: white;width: 260px;">
                             NEUTRAL
                         </button>
-                        <button *ngIf="readOnlyName || name === '....'" (click)="setNeutral()" type="button"
+                        <button *ngIf="readOnlyName || name === '....'" [disabled]="true" type="button"
                             class="btn btn-lg mat-elevation-z2"
                             style="color: grey;width: 260px;">
                             NEUTRAL
@@ -71,12 +71,12 @@
                             class="btn btn-outline-danger btn-lg mat-elevation-z8 buttons-negative" style="width: 260px;">
                             NEGATIVE
                         </button>
-                        <button *ngIf="negativeVote  && !readOnlyName  && name !== '....'" (click)="setNegative()" type="button"
+                        <button *ngIf="negativeVote  && !readOnlyName  && name !== '....'" (click)="removeVote()" type="button"
                             class="btn btn-lg mat-elevation-z2"
                             style="background-color: #b71c1c;color: white;width: 260px;">
                             NEGATIVE
                         </button>
-                        <button *ngIf="readOnlyName || name === '....'" (click)="setNegative()" type="button"
+                        <button *ngIf="readOnlyName || name === '....'"  [disabled]="true" type="button"
                             class="btn btn-lg mat-elevation-z2"
                             style="color:grey;width: 260px;">
                             NEGATIVE
