--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -9,8 +9,13 @@
         <div class="col-md-12">
 
             <section class="text-center " style="padding: 35px 0px 31px 0px;">
-
-                <h1 style="font-size: 40px;">{{name}}</h1>
+                <div fxLayout="row" fxLayoutAlign="center center" >
+                    <div><h1 style="font-size: 40px;">{{nameToDisplay}}</h1></div>&nbsp;
+                    <div>
+                        <span style="font-size:19px ;">{{notation}}</span>
+                    </div>
+                </div>
+               
                 <h3 style="max-width: 500px;" [innerHTML]="rationales" html style="font-size: 28px;"></h3>
                 <hr>
 
