--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -496,22 +496,22 @@ $postItHeaderColors: #d6f8fd, #d6f8fd, #d6f8fd,#d6f8fd, #d6f8fd, #d6f8fd,#d6f8fd
 $postItHeaderColorsLength: length($postItHeaderColors);
 .post-it-list {
   @for $i from 1 through 3 {
-    &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .post-card {
-      background: nth($postItHeaderColors, $i);
-      animation: nth($postItanimations, $i)  0.1s;
-      animation-delay: #{$i};
-    }
+    // &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .post-card {
+    //   background: nth($postItHeaderColors, $i);
+    //   animation: nth($postItanimations, $i)  0.1s;
+    //   animation-delay: #{$i};
+    // }
 
-    &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .post-card:hover {
-      // background: nth($postItHeaderColors, $i);
-      // -o-transform: rotate(4deg);
-      // -webkit-transform: rotate(4deg);
-      -moz-transform: rotate(0.5deg);
-      position: relative;
-      top: -2px;
-      background: lightgoldenrodyellow;
-      animation: nth($postItanimations, $i) 1s;
-    }
+    // &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .post-card:hover {
+    //   // background: nth($postItHeaderColors, $i);
+    //   // -o-transform: rotate(4deg);
+    //   // -webkit-transform: rotate(4deg);
+    //   -moz-transform: rotate(0.5deg);
+    //   position: relative;
+    //   top: -2px;
+    //   background: lightgoldenrodyellow;
+    //   animation: nth($postItanimations, $i) 1s;
+    // }
   }
 }
 
@@ -608,9 +608,9 @@ $postItHeaderColors2: #d6f8fd, #dcd6fd, #d6fde9,#fdfcd6, #d6f8fd, #fdd6e8,#fddfd
   opacity: 1;
   transition: opacity .5s ease-out;
   // animation-fill-mode: both;
-  animation-direction: alternate;
-  animation: lightSpeedInRight 1s ; /* referring directly to the animation's @keyframe declaration */
-  animation-delay: 1s; /* don't forget to set a duration! */
+  // animation-direction: alternate;
+  // animation: lightSpeedInRight 1s ; /* referring directly to the animation's @keyframe declaration */
+  // animation-delay: 1s; /* don't forget to set a duration! */
   // animation-duration: 1s; /* don't forget to set a duration! */
 }
 
