alert board height and width dyamnically fixed

--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -169,7 +169,7 @@
         </div>
     </div>
 
-    <div *ngIf="!infoMessage && !isMobileInfo">
+    <div *ngIf="!infoMessage && !isMobileInfo" class="mat-elevation-z4">
         <form name="loginForm" [formGroup]="loginForm" novalidate class="">
             <!-- EDITOR CARD -->
             <div class="container" fxLayout="column" fxLayoutAlign="center center">
@@ -192,12 +192,12 @@
 
                             <div fxLayoutAlign="center center">
 
-                                <mat-form-field *ngIf="!isDeleting"  style="width: 954px;
+                                <mat-form-field *ngIf="!isDeleting" style="width: 954px;
                                 position: relative;
                                 top: -20px;
                                 font-size: 31px;">
                                     <!-- <mat-label>CONCEPT</mat-label> -->
-                                    <input matInput type="Concept"  formControlName="name">
+                                    <input matInput type="Concept" formControlName="name">
                                 </mat-form-field>
                             </div>
 
@@ -222,7 +222,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <div class="ckeditor-card"  >
+                        <div class="ckeditor-card">
 
 
                             <div class="p-16" style="color: #004684;padding: 10px;" fxLayout="row"
@@ -231,7 +231,8 @@
 
                                 <!-- <mat-icon style="margin-right: 10px;">assignment</mat-icon> -->
                                 <h2 class="text-bold ">Key Words and Concepts</h2>
-                                <button mat-button style="" (click)="getSynonyms()">synonyms</button>
+
+                                <mat-icon class="synonymsIcon" (click)="getSynonyms()">layers</mat-icon>
 
                                 <!-- <div class="ml-16">
                             <div class="h5 text-bold secondary-text">20 mins. ago</div>
@@ -260,8 +261,8 @@
                                                             position: absolute;
                                                             font-size: 30px;
                                                             line-height: 28px;
-                                                            top: 40px;" 
-                                    appearance="outline" formControlName="suma"></textarea>
+                                                            top: 40px;" appearance="outline"
+                                    formControlName="suma"></textarea>
                             </div>
                         </div>
                     </div>
@@ -283,53 +284,48 @@
     </div>
 </div>
 
-<!-- 
-<div *ngIf="!infoMessage && !isMobileInfo" style="width: 100%;overflow: hidden;">
+<div class="synonyms-box" *ngIf="isSynonymBox">
 
-    <form name="loginForm" [formGroup]="loginForm" novalidate class="">
-        <div fxLayoutAlign="center center">
+    <!-- <div class="row">Synonyms for : <span style="font-size: 30px;color: #004684;"> {{synonymWord}} </span></div> -->
+    <div class="row">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-            <mat-form-field *ngIf="!isDeleting" appearance="outline" style="width: 400px;">
-                <mat-label>CONCEPT</mat-label>
-                <input matInput type="Concept" placeholder="Concept" formControlName="name">
-            </mat-form-field>
-        </div>
-
-       
-        <div class="mat-h3" style="text-align: left;color: #000;">
-            <div class="row">
-                <div class="col-md-7">
-                    <div style="color: #004684;">Key Words and Concepts</div>
-                    <ckeditor #child [data]="dataEditor" (ready)="onReady($event)"
-                        [ngModelOptions]="{standalone: true}" [(ngModel)]="model.editorData" class="ckeditorcev"
-                        [config]="ckconfig"></ckeditor>
-                  
-                </div>
-                <div class="col-md-1">
-                    <button (click)="getSinonyms('one')" class="refreshbutton" mat-button style="font-size: 8px;"
-                        color="success" aria-label="icon">
-                        SYNONYMS
-                    </button>
-                </div>
-                <div class="col-md-4">
-                    <div style="color: #004684;">Name Candidates</div>
-
-                    <mat-form-field>
-                        <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="23" formControlName="suma"
-                            cdkAutosizeMaxRows="23"
-                            style="max-height: 400px;border-top:solid black 1px;border-left:solid black 1px;border-right:solid black 1px; padding: 10px;"
-                            appearance="outline" formControlName="suma"></textarea>
-                    </mat-form-field>
-                   
-                </div>
-            </div>
-        </div>
-    </form>
-
-    <div fxLayoutAlign="end end">
-        <button (click)="buttonOption('savePost')" class="refreshbutton" mat-fab style="color: white;position: fixed;
-    bottom: 128px;background-color: green;padding: 4px;outline: none;" color="success" aria-label="icon">
-            <mat-icon>check</mat-icon>
-        </button>
+            <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+    
+            <!-- Position Column -->
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            </ng-container>
+    
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Synonyms </th>
+                <td mat-cell *matCellDef="let element"> {{element.synonyms}} </td>
+            </ng-container>
+    
+            <!-- Weight Column -->
+            <ng-container matColumnDef="weight">
+                <th mat-header-cell *matHeaderCellDef> Select </th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-checkbox 
+                        (change)="setAll(element.synonyms)">
+                    </mat-checkbox>
+                </td>
+    
+            </ng-container>
+    
+    
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
     </div>
-</div> -->
+    <div class="row">  <button class="add-synonyms" (click)="addSynonymsToEditor()">DONE</button></div>
+
+
+   
+
+ 
+</div>
