--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -150,7 +150,7 @@
                   (input)="onInputChange($event)"></mat-slider>
                 <div class="col-md-4" *ngIf="nameBox && nameBoxB">
                   <!-- NAMES  nameCandidates BOX -->
-
+                  <button mat-button class="screen-button">screen</button>
                   <div class="names-container bounceOut" [ngStyle]="{'max-width': myMaxRWith  }">
                     <div *ngFor="let  item of nameCandidates; let i = index">
                       <span (dblclick)="openDialog(item, 'deleteName')"
@@ -181,7 +181,7 @@
 
                 <div class="col-md-4 " *ngIf="!nameBox && nameBoxB">
                   <!-- NAMES BOX -->
-
+                  <button mat-button class="screen-button">screen</button>
                   <div class="names-container3 bounceIn">
                     <div *ngFor="let  item of nameCandidates; let i = index">
                       <span (dblclick)="openDialog(item, 'deleteName')"
@@ -211,7 +211,7 @@
 
                 <div class="col-md-4 " *ngIf="nameBox && !nameBoxB">
                   <!-- NAMES BOX -->
-
+                  <button mat-button class="screen-button">screen</button>
                   <div class="names-container2 bounceIn">
                     <div *ngFor="let  item of nameCandidates; let i = index">
                       <span (dblclick)="openDialog(item, 'deleteName')"
