--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -491,9 +491,9 @@ mat-slider {
 }
 
 .screen-button {
-  position: fixed;
-  top: 124px;
-  left: 1143px;
+  position: absolute;
+  top: 60px;
+  right: 17px;
   z-index: 999999;
 }
 
