--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mat-elevation-z4 bsr-mobile-container" >
     <div class="row">
 
         <mat-toolbar class="toolbar " fxLayoutAlign="space-between center">
