--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -30,13 +30,14 @@
                         color="success" aria-label="icon">
                         <mat-icon>check</mat-icon>
                     </button><br>
-                    <div style="color: #000;">delete</div>
+                   
                     <button *ngIf="!isDeleting && !isDeletingName" (click)="buttonOption('deleteName')"
                         class="refreshbutton" mat-mini-fab
                         style="color: white;background-color: red;padding: 4px;outline: none;" color="success"
                         aria-label="icon">
                         <mat-icon>delete</mat-icon>
                     </button>
+                    <div style="color: #000;">delete</div>
                 </div>
             </div>
         </div>
@@ -44,14 +45,14 @@
 
     </div>
     <!-- MOBILE INFO PICTURE DISPLAY -->
-    <div *ngIf="isMobileInfo" style="height: 300px;text-align: center;font-size-adjust: 100px;">
+    <div *ngIf="isMobileInfo">
 
         <div class="row" layout-align="center center">
 
-            <div flex="" class="text-center flex" style="margin:0 10px">
+            <div flex="" class="text-center flex" style="margin:0 18px">
                 <p>1. Access
                     www.mynamepage.com/ti823</p>
-                <img class="instruction-style" src="assets/img/bsr/login_page.png" alt="Login">
+                <img class="instruction-style mat-elevation-z4" src="assets/img/bsr/login_page.JPG" alt="Login">
             </div>
             <div flex="" class="text-center flex" style="margin-right:10px">
                 <p>2.
@@ -78,7 +79,7 @@
 
         <div ng-hide="!bsrMenubarController.isItNSR" class="nonprop-name-rule-style" aria-hidden="false">
 
-            <h4>
+            <!-- <h4>
                 The letters h, j, k, w, and y should be avoided
             </h4>
 
@@ -165,7 +166,7 @@
                 <li type="square" style="padding-left:30px;">
                     the name of the manufacturer
                 </li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 
