--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -289,6 +289,7 @@
 
     <!-- <div class="row">Synonyms for : <span style="font-size: 30px;color: #004684;"> {{synonymWord}} </span></div> -->
     <div class="row">
+        <p>{{dataSource.lenght}}</p>
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <!--- Note that these columns can be defined in any order.
