--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -27,7 +27,7 @@
               <mat-icon>lightbulb_outline</mat-icon>
             </button>
 
-            <input class="search" placeholder="search" type="text" (keypress)="searchTerm($event.target.value)">
+            <input class="search" placeholder="search" type="text" (input)="searchTerm($event.target.value)">
             <div class="col" *ngIf="isSearching">
               <div style="
               width: 149px;
@@ -104,7 +104,8 @@
                     [matTooltip]="'Names Create '+ nameCandidates.length" matTooltipPosition="right">
                     Names <span *ngIf="nameCandidates.length > 0">{{':'+nameCandidates.length}}</span>
                   </div>
-                  <button *ngIf="isScreenButton" (click)="screenNames()" mat-raised-button class="screen-button">screen</button>
+                  <button *ngIf="isScreenButton" (click)="screenNames()" mat-raised-button
+                    class="screen-button">screen</button>
                 </div>
               </mat-toolbar>
             </div>
@@ -169,7 +170,7 @@
                       <div style="border-bottom: rgba(0,0,0,.12) 1px solid;width: 100%;text-align: center;"></div>
                     </div>
                   </div>
-
+                  
                   <form name="loginForm" [formGroup]="loginForm" novalidate class="name-form"
                     fxLayoutAlign="center center">
 
@@ -181,7 +182,10 @@
                       style="outline: none;">
                       SUBMIT
                     </button>
+                    <p style="position: absolute;
+                    top: 60px;">www.mynamepage.com/{{projectId}}</p>
                   </form>
+                 
 
                 </div>
                 <div *ngIf="true">
@@ -249,6 +253,34 @@
                 </div>
               </div>
               <div class="row">
+
+
+                <!-- SEARCH RESULTS -->
+                <div class="col" *ngIf="isSearching">
+
+                  <div class="search-results" >
+                    <mat-card (click)="goToSlide(i)" class="example-card"
+                      *ngFor="let item of appSearchSlidesData; let i = index">
+
+
+                      <!-- <p>{{item.DisplayName}}</p> -->
+
+
+                      <mat-card-header>
+
+                        <!-- <mat-card-title>Shiba Inu</mat-card-title> -->
+                        <mat-card-subtitle>{{item.DisplayName}}</mat-card-subtitle>
+                      </mat-card-header>
+                      <img [src]="'http://www.bipresents.com/' + item.SlideBGFileName" alt="overview"
+                        style="max-width: 100px;cursor: pointer;">
+                    </mat-card>
+                    <br>
+                    <hr>
+                  </div>
+                </div>
+
+
+
                 <div class="col-md-12">
                   <!-- MENU -->
                   <mat-toolbar class="toolbar-postit mat-elevation-z4 bounceIn" *ngIf="mainMenu">
@@ -264,31 +296,7 @@
                     </button>
 
                     <input class="search" placeholder="search" type="text" (input)="searchTerm($event.target.value)">
-                    <div class="col" *ngIf="isSearching">
-                      <div style="
-                           width: 149px;
-                           height: 350px;
-                           overflow-y: scroll;
-                           position: absolute;
-                           left: -170px;
-                           bottom: 27px;
-                           z-index: 99999999999999;">
-                        <mat-card (click)="goToSlide(i)" class="example-card"
-                          *ngFor="let item of appSearchSlidesData; let i = index">
 
-
-                          <mat-card-title>Hello</mat-card-title>
-
-                          <mat-card-header>
-
-                            <!-- <mat-card-title>Shiba Inu</mat-card-title> -->
-                            <mat-card-subtitle>{{item.DisplayName}}</mat-card-subtitle>
-                          </mat-card-header>
-                          <img [src]="'http://www.bipresents.com/' + item.SlideBGFileName" alt="overview"
-                            style="max-width: 100px;cursor: pointer;">
-                        </mat-card>
-                      </div>
-                    </div>
                     <button (click)="moveBackward()" mat-icon-button color="accent"
                       aria-label="Example icon-button with a heart icon">
                       <mat-icon>chevron_left</mat-icon>
