removing rationale box from bsr-mobile

--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -16,7 +16,7 @@
                 <div fxFlex>
 
                     <button *ngIf="!isDeleting" (click)="buttonOption('cancel')" class="refreshbutton" mat-mini-fab
-                        style="color: white;background-color: green;padding: 4px;outline: none;" color="success"
+                        style="color: white;background-color: grey;padding: 4px;outline: none;" color="success"
                         aria-label="icon">
                         <mat-icon>cancel</mat-icon>
                     </button><br>
