--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -202,21 +202,6 @@
                                 </mat-form-field>
                             </div>
 
-
-
-
-                            <!-- <img src="assets/images/cards/card1.jpg">
-                
-                    <div class="p-16">
-                        <div class="h1">Kangaroo Valley Safari</div>
-                        <div class="h4 secondary-text">Free on Thursdays</div>
-                    </div>
-                
-                    <div class="p-16 pt-0 line-height-1.75">
-                        Cards provide context and an entry point to more robust information and views, and
-                        their content and quantity can vary greatly.
-                    </div> -->
-
                         </div>
                     </div>
                 </div>
@@ -289,7 +274,7 @@
 
     <!-- <div class="row">Synonyms for : <span style="font-size: 30px;color: #004684;"> {{synonymWord}} </span></div> -->
     <div class="row">
-        <p>{{dataSource.lenght}}</p>
+        <p>{{dataSource.length}}</p>
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <!--- Note that these columns can be defined in any order.
