--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -103,6 +103,9 @@
                                 class="submit-button" aria-label="LOG IN">
                                 CLICK TO SUBMIT
                             </button>
+                            <button mat-icon-button color="accent" aria-label="emoji">
+                                <mat-icon>tag_faces</mat-icon>
+                              </button>
 
                             <br>
                             <br>
